# libudev-cmake

./: .gitignore  CMakeLists.txt
